[package]
name = "final_network_sts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
env_logger = "0.10.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
array_tool = "1.0.3"
union-find = "0.4.1"
rand = "0.8.5"
fxhash = "0.2.1"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "benchmark"
harness = false
#path = "src/benches/benchmark.rs"

[profile.release]
debug = true
